--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         content="Goalmeter helps you track project progress with a dual-view system that toggles between a text editor and interactive checklist. See real-time progress updates as you complete tasks.">
     <meta name="keywords"
         content="project management, task tracking, goal tracking, checklist, progress meter, productivity tool, goal completion progress visualization, goal measurement">
-    <meta name="author" content="Goalmeter Team">   
+    <meta name="author" content="Goalmeter Team">
     <meta name="theme-color" content="#4CAF50">
 
     <!-- Open Graph / Facebook -->
@@ -27,7 +27,7 @@
     <meta property="twitter:description"
         content="Transform your tasks into interactive checklists and track your progress in real-time. Seamlessly switch between editing and checking off tasks.">
     <meta property="twitter:image" content="https://goalmeter.xyz/goalmeter.png">
-	<link rel="icon" type="image/png" href="focus.png" />
+    <link rel="icon" type="image/png" href="focus.png" />
 
     <title>Goal Meter</title>
     <style>
@@ -68,8 +68,46 @@
             height: 100%;
             background: linear-gradient(to right, #72e072, #a4e57e);
             border-radius: 20px;
-            width: 42.96%;
+            width: 99.33%;
             transition: width 1s ease;
+            animation: pulse 2s ease-in-out infinite, morph 3s ease-in-out infinite;
+        }
+
+
+        @keyframes pulse {
+            0% {
+                opacity: 0.7;
+            }
+
+            50% {
+                opacity: 1;
+            }
+
+            100% {
+                opacity: 0.7;
+            }
+        }
+
+        @keyframes morph {
+            0% {
+                transform: translateX(0);
+            }
+
+            25% {
+                transform: translateX(-5px);
+            }
+
+            50% {
+                transform: translateX(2px);
+            }
+
+            75% {
+                transform: translateX(-5px);
+            }
+
+            100% {
+                transform: translateX(0);
+            }
         }
 
         .percentage {
@@ -144,7 +182,7 @@
 
         .sidebar-header h2 {
             margin: 0;
-			display:inline-block;
+            display: inline-block;
         }
 
         .close-sidebar {
@@ -183,8 +221,8 @@
             flex-direction: column;
             height: 100%;
         }
-		
-		.save-button,
+
+        .save-button,
         .edit-tasks-button {
             background-color: #72e072;
             color: #000;
@@ -264,24 +302,26 @@
         .empty-line {
             height: 10px;
         }
-		
-		a {
-			display:inline-block;
-		}
-		svg {
-			fill:#fff;
-			vertical-align:middle;
-			height: 16px;
-		}
-		
-		@media only screen and (max-width: 600px) {
-			#editorView, #checklistView {
-				display: flex;
-				flex-direction: column;
-				height: 90%;
-			}
-		}
-		
+
+        a {
+            display: inline-block;
+        }
+
+        svg {
+            fill: #fff;
+            vertical-align: middle;
+            height: 16px;
+        }
+
+        @media only screen and (max-width: 600px) {
+
+            #editorView,
+            #checklistView {
+                display: flex;
+                flex-direction: column;
+                height: 90%;
+            }
+        }
     </style>
 </head>
 
@@ -304,7 +344,11 @@
     <div class="sidebar" id="sidebar">
         <div class="sidebar-header">
             <h2 id="sidebarTitle">Edit Tasks</h2>
-			<a target="_blank" href="https://github.com/bhu1st/goalmeter"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg></a>			
+            <a target="_blank" href="https://github.com/bhu1st/goalmeter"><svg xmlns="http://www.w3.org/2000/svg"
+                    width="24" height="24" viewBox="0 0 24 24">
+                    <path
+                        d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
+                </svg></a>
             <button class="close-sidebar" id="closeSidebar">&times;</button>
         </div>
         <div class="sidebar-content">
@@ -603,4 +647,5 @@
         });
     </script>
 </body>
+
 </html>
