--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
     <meta property="twitter:image" content="https://goalmeter.xyz/goalmeter.png">
     <link rel="icon" type="image/png" href="focus.png" />
 
+	<!-- Hotjar Tracking Code for Goal Meter -->
+	<script>
+		(function(h,o,t,j,a,r){
+			h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+			h._hjSettings={hjid:6407788,hjsv:6};
+			a=o.getElementsByTagName('head')[0];
+			r=o.createElement('script');r.async=1;
+			r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+			a.appendChild(r);
+		})(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+	</script>
+	
     <title>Goal Meter</title>
     <style>
         body {
@@ -94,7 +106,7 @@
             }
 
             25% {
-                transform: translateX(-5px);
+                transform: translateX(-2px);
             }
 
             50% {
@@ -102,7 +114,7 @@
             }
 
             75% {
-                transform: translateX(-5px);
+                transform: translateX(-2px);
             }
 
             100% {
@@ -354,7 +366,7 @@
         <div class="sidebar-content">
             <!-- Text editor view -->
             <div id="editorView">
-                <textarea id="taskEditor">* Goalmeter
+                <textarea id="taskEditor"># Goalmeter
 
 # [ ] Product Development
 - [ ] Implement dark/light theme toggle
